# sst-waveshapers

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml
.github/workflows/: build-pr.yml
doxygen/: Doxyfile  header.html
examples/: CMakeLists.txt
examples/waveshapers_example_plugin/: CMakeLists.txt  WaveshapersPlugin.cpp  WaveshapersPlugin.h
include/sst/: waveshapers.h
include/sst/utilities/: globals.h
include/sst/waveshapers/: ADAA.h  DCBlocker.h  Effects.h  Fuzzes.h  Harmonics.h  QuadWaveshaper.h  QuadWaveshaper_Impl.h  Rectifiers.h  Saturators.h  Trigonometrics.h  Wavefolders.h  WaveshaperConfiguration.h  WaveshaperLUT.h  WaveshaperTables.h
scripts/: fix_file_comments.pl  fix_header_guards.pl
tests/: CMakeLists.txt  ClickAtOutset.cpp  EffectsTest.cpp  FuzzesTest.cpp  HarmonicsTest.cpp  RectifiersTest.cpp  SaturatorsTest.cpp  ShapesAreBounded.cpp  TestUtils.h  TrigonometricsTest.cpp  WavefoldersTest.cpp  WaveshapersTest.cpp  tests.cpp
